<resources>
    <string name="app_name">담타</string>
    <string name="slogan">슬기로운 흡연생활, </string>

    <string name="loading_text">내 주변 흡연 구역은?</string>
    <string name="login_title">슬기로운 흡연 생활\n담타 DAMTA !</string>
    <string name="login_btn">로그인</string>
    <string name="login_register">회원가입</string>
    <string name="save_username">아이디 저장</string>
    <string name="auto_login">자동 로그인</string>

    <string name="next">다음</string>
    <string name="finish">완료</string>
    <string name="confirm">확인</string>

    <string name="register_title">정보를\n입력하세요!</string>
    <string name="user_id">아이디</string>
    <string name="user_pw">비밀번호</string>
    <string name="user_nick">이름(닉네임)</string>
    <string name="user_bday">생년월일</string>
    <string name="user_email">이메일</string>

    <string name="register_success">회원가입이 완료되었습니다</string>
    <string name="error_occured">오류가 발생했습니다.</string>

    <string name="warning_same_username">이미 사용중인 아이디입니다.</string>
    <string name="warning_empty_field">모든 정보를 입력해야 다음 단계로 이동할 수 있습니다.</string>
    <string name="warning_age">20세 이상의 성인만 회원가입이 가능합니다.</string>
    <string name="warning_login_failed">아이디가 존재하지 않거나 비밀번호가 틀렸습니다.</string>

    <string name="search_hint">검색어를 입력하세요</string>

    <string name="area_type_opened">개방형</string>
    <string name="area_type_closed">폐쇄형</string>
    <string name="area_type_fullyclosed">완전폐쇄형</string>

    <string name="information_title_opened">*개방형</string>
    <string name="information_opened">벽면의 전부 또는 일부를 개방해 공기의 자연이동을 이용한 환기</string>

    <string name="information_title_closed">*폐쇄형</string>
    <string name="information_closed">자연환기 : 별도의 담배연기 정화장치 없음\n단순배출 : 공기의 자연이동을 이용한 환기와 환풍기 동시 사용</string>

    <string name="information_title_fullyclosed">*완전폐쇄형</string>
    <string name="information_fullyclosed">단순배출 : 공기의 자연이동을 이용한 환기와 환풍기 동시 사용\n정화배출 : 제연기를 이용해 오염된 실내 공기를 정화시키고 밖으로 배출</string>

    <string name="decision_close">닫기</string>
    <string name="decision_confirm">완료</string>

    <string name="more_review">방문자 리뷰 더보기</string>
    <string name="more_photo">사진 더보기</string>

    <string name="density_low">여유</string>
    <string name="density_medium">보통</string>
    <string name="density_high">혼잡</string>

    <string name="detail_navigation">길찾기</string>
    <string name="detail_share">공유</string>

    <string name="related_facility">관련시설</string>
    <string name="ashtray">재떨이</string>
    <string name="vent">환풍구</string>
    <string name="bench">벤치</string>
    <string name="machine">자판기</string>

    <string name="photo">사진</string>
    <string name="review">리뷰</string>

    <string name="radius">반경</string>
    <string name="inside">이내</string>

    <string name="new_review">방문자 리뷰 글쓰기</string>
    <string name="new_review_hint">: 방문 평을 남겨주세요 !</string>
    <string name="new_review_density">%s에 방문하신\n\"%s\"의\n밀집도를 기록해주세요!</string>

    <string name="register_area">흡연구역 등록요청</string>
    <string name="question_1">보행자 주 통행로에서 20미터 이상 떨어져 있습니까?</string>
    <string name="question_2">화기성 물질로부터 안전한 거리가 확보되어 있습니까?</string>
    <string name="question_3">다른 실외 흡연구역으로 부터 500m 떨어져 있습니까?</string>
    <string name="question_yes">예</string>
    <string name="question_no">아니오</string>
    <string name="question_idk">잘 모르겠음</string>
    <string name="check_register_standard"><u>실외 흡연구역 지정 권고 기준 확인하기</u></string>
    <string name="check_all_questions">모든 질문에 답해주세요</string>

    <string name="register_standard">실외 흡연구역 지정 권고 기준</string>
    <string name="register_standard_warning">실외 흡연구역 지정 권고 기준에 적합한 공간만이 흡연 구역이 될 수 있습니다</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="register_standard_1">보행자의 주 통행로로부터 20미터 이상 떨어진 곳으로 보행자의 간접흡연이 발생하지 않는 적절한 위치에 지정</string>
    <string name="register_standard_1_remark">(다만, 개별 입지의 특성 등을 고려하여 부득이한 경우 20미터 이내의 거리를 두고 지정할 수 있음)</string>
    <string name="register_standard_2">건물 옥상의 경우 공조시설을 고려하여 지정하며, 화기성 물질을 포함하는 시설로부터 안전한 거리를 확보해야 함</string>
    <string name="register_standard_3">유치원ㆍ병의원ㆍ학교 등의 인근과 주거밀집지역은 실외 흡연가능 구역의 지정을 최소화해야 함</string>
    <string name="register_standard_4">실외 흡연구역 간 500미터 이상의 거리를 지정</string>
    <string name="register_standard_4_remark">(다만, 개별 입지의 특성과 간접흡연 피해 정도를 고려하여 부득이한 경우 500미터 이내의 거리를 두고 지정할 수 있음)</string>
    <string name="register_standard_5">실외 흡연구역 1개소의 면적과 개수는 길거리 간접흡연 피해의 정도, 유동인구 및 흡연인구 등을 종합적으로 고려하여 최소한의 범위에서 지정할 수 있음</string>

    <string name="register_information_1">등록을 원하시는\n장소의 이름을\n기입하세요!</string>
    <string name="register_information_2">등록을 원하시는\n장소의 위치를\n기입하세요!</string>
    <string name="register_information_3">등록을 원하시는\n장소의 시설를\n확인해주세요!</string>
    <string name="register_information_4">등록을 원하시는\n장소의 유형을\n선택해주세요!</string>
    <string name="register_information_5">등록을 원하시는\n장소의 밀집도를\n입력해주세요!</string>
    <string name="register_information_6">등록을 원하시는\n장소의 사진을\n첨부해주세요!</string>
    <string name="attach_image">이미지 첨부</string>
    <string name="thank_message">소중한 의견\n감사합니다 :)</string>

    <string name="number_point_1">1.</string>
    <string name="number_point_2">2.</string>
    <string name="number_point_3">3.</string>
    <string name="number_point_4">4.</string>
    <string name="number_point_5">5.</string>
    <string name="number_point_6">6.</string>

    <string name="area_name">이름</string>
    <string name="area_address">주소(상세주소)</string>

    <string name="mypage">마이 페이지</string>
    <string name="my_profile">계정 정보</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="edit_profile2">수정 완료</string>
    <string name="my_bookmark">즐겨찾기 모음</string>
    <string name="my_review">내가 쓴 글</string>
    <string name="settings">환경설정</string>
    <string name="service">고객센터</string>

    <string name="my_profile_title">%s님,\n안녕하세요!</string>

    <string name="settings_alarm">알림설정</string>
    <string name="settings_version">버전정보</string>
    <string name="service_title">무엇이든\n물어보세요!</string>
    <string name="service_subtitle1">담타(DAMTA) 서비스와 관련된\n모든 궁금사항에 대해 답변 해드리겠습니다.\n</string>
    <string name="service_subtitle2">가입하신</string>
    <string name="service_subtitle3">로 답변을 확인 해주세요.</string>
    <string name="service_hint">내용을 적어주세요</string>

    <string name="accept_email">이메일 정보 제공 동의</string>
    <string name="send">보내기</string>
</resources>