<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/register_content_padding_horizontal"
    android:paddingEnd="@dimen/register_content_padding_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_point_3"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:textSize="@dimen/register_title_text"
            android:textColor="@color/highlight"
            android:layout_marginTop="@dimen/register_number_margin_top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_information_3"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:textSize="@dimen/register_title_text"
            android:textColor="@color/dark"
            android:layout_marginTop="@dimen/register_title_margin_top"
            android:layout_marginStart="@dimen/register_title_margin_start"/>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/register_checkbox_margin_horizontal"
        android:layout_marginEnd="@dimen/register_checkbox_margin_horizontal">

        <CheckBox
            android:id="@+id/cb_ashtray"
            style="@style/RegisterPlaceCheckBox"
            android:text="@string/ashtray" />

        <CheckBox
            android:id="@+id/cb_machine"
            style="@style/RegisterPlaceCheckBox"
            android:text="@string/machine" />

        <CheckBox
            android:id="@+id/cb_vent"
            style="@style/RegisterPlaceCheckBox"
            android:text="@string/vent" />

        <CheckBox
            android:id="@+id/cb_bench"
            style="@style/RegisterPlaceCheckBox"
            android:text="@string/bench" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="3"/>
</LinearLayout>
