<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/register_content_padding_horizontal"
    android:paddingEnd="@dimen/register_content_padding_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_point_4"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:textSize="@dimen/register_title_text"
            android:textColor="@color/highlight"
            android:layout_marginTop="@dimen/register_number_margin_top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_information_4"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:textSize="@dimen/register_title_text"
            android:textColor="@color/dark"
            android:layout_marginTop="@dimen/register_title_margin_top"
            android:layout_marginStart="@dimen/register_title_margin_start"/>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/register_checkbox_margin_horizontal"
        android:layout_marginEnd="@dimen/register_checkbox_margin_horizontal">

        <RadioButton
            android:id="@+id/rb_opened"
            style="@style/RegisterPlaceCheckBox"
            android:text="@string/area_type_opened"/>

        <RadioButton
            android:id="@+id/rb_closed"
            style="@style/RegisterPlaceCheckBox"
            android:text="@string/area_type_closed" />

        <RadioButton
            android:id="@+id/rb_fullyclosed"
            style="@style/RegisterPlaceCheckBox"
            android:text="@string/area_type_fullyclosed" />
    </RadioGroup>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/register_information_box"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_title_opened"
                    android:textColor="@android:color/white"
                    android:shadowRadius="5.0"
                    android:shadowColor="@color/shadowed_highlight"
                    android:fontFamily="@font/noto_sans_cjk_kr_bold"
                    android:textSize="@dimen/area_information_title_text"
                    android:layout_marginEnd="@dimen/area_information_title_margin_end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_opened"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:textSize="@dimen/area_information_title_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_title_closed"
                    android:textColor="@android:color/white"
                    android:shadowRadius="5.0"
                    android:shadowColor="@color/shadowed_highlight"
                    android:fontFamily="@font/noto_sans_cjk_kr_bold"
                    android:textSize="@dimen/area_information_title_text"
                    android:layout_marginEnd="@dimen/area_information_title_margin_end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_closed"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:textSize="@dimen/area_information_title_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_title_fullyclosed"
                    android:textColor="@android:color/white"
                    android:shadowRadius="5.0"
                    android:shadowColor="@color/shadowed_highlight"
                    android:fontFamily="@font/noto_sans_cjk_kr_bold"
                    android:textSize="@dimen/area_information_title_text"
                    android:layout_marginEnd="@dimen/area_information_title_margin_end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information_fullyclosed"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:textSize="@dimen/area_information_title_text"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/small_icon"
            android:layout_height="@dimen/small_icon"
            android:src="@drawable/information_green"/>
    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
