<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/topbar_padding_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage"
            android:textColor="@color/dark"
            android:textSize="@dimen/mypage_main_title_text"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="@dimen/medium_icon"
            android:layout_height="@dimen/medium_icon"
            android:src="@drawable/back_arrow"
            android:layout_gravity="bottom|start"
            android:layout_marginVertical="@dimen/back_margin" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mypage_main_green"
            android:layout_marginStart="@dimen/mypage_green_margin_start"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mypage_main_dark"
            android:layout_marginStart="@dimen/mypage_dark_margin_start"
            android:layout_marginTop="@dimen/mypage_dark_margin_top"
            android:padding="@dimen/mypage_padding"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:fontFamily="@font/noto_sans_cjk_kr_regular"
                android:textSize="@dimen/mypage_item_text"
                android:textColor="@android:color/white"
                android:layout_marginVertical="@dimen/mypage_item_margin_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_bookmark"
                android:fontFamily="@font/noto_sans_cjk_kr_regular"
                android:textSize="@dimen/mypage_item_text"
                android:textColor="@android:color/white"
                android:layout_marginVertical="@dimen/mypage_item_margin_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_review"
                android:fontFamily="@font/noto_sans_cjk_kr_regular"
                android:textSize="@dimen/mypage_item_text"
                android:textColor="@android:color/white"
                android:layout_marginVertical="@dimen/mypage_item_margin_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:fontFamily="@font/noto_sans_cjk_kr_regular"
                android:textSize="@dimen/mypage_item_text"
                android:textColor="@android:color/white"
                android:layout_marginVertical="@dimen/mypage_item_margin_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service"
                android:fontFamily="@font/noto_sans_cjk_kr_regular"
                android:textSize="@dimen/mypage_item_text"
                android:textColor="@android:color/white"
                android:layout_marginVertical="@dimen/mypage_item_margin_vertical"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:gravity="bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:textSize="@dimen/mypage_slogan_text"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:textSize="@dimen/mypage_apptitle_text"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>