<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/register_content_padding_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_point_2"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:textSize="@dimen/register_title_text"
            android:textColor="@color/highlight"
            android:layout_marginTop="@dimen/register_number_margin_top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_information_2"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:textSize="@dimen/register_title_text"
            android:textColor="@color/dark"
            android:layout_marginTop="@dimen/register_title_margin_top"
            android:layout_marginStart="@dimen/register_title_margin_start"/>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_address"
        android:fontFamily="@font/noto_sans_cjk_kr_medium"
        android:textSize="@dimen/register_subtitle_text"
        android:textColor="@color/register_area_dark"/>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/register_area_dark"
        android:fontFamily="@font/noto_sans_cjk_kr_medium"
        android:textSize="@dimen/register_text"
        android:textColor="@color/register_area_dark"
        android:focusable="false" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="3"/>
</LinearLayout>
